crates/math-core/tests/snapshots/conversion_test__lvert_and_rvert.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x + \\lvert + y + \\rvert + z"
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mo stretchy="false" form="prefix">|</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mi>y</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo stretchy="false" form="postfix">|</mo>
    <mo>+</mo>
    <mi>z</mi>
</math>
