crates/math-core/tests/snapshots/conversion_test__mathbb_no_brackets.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbb N"
---
<math>
    <mi>ℕ</mi>
</math>
