crates/math-core/tests/snapshots/conversion_test__mathbf_with_digit_decimal.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbf{1234.5}"
---
<math>
    <mrow><mspace/><mi>𝟏𝟐𝟑𝟒.𝟓</mi></mrow>
</math>
