crates/math-core/tests/snapshots/conversion_test__mathbf_with_digit_dot.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbf{1234.}"
---
<math>
    <mpadded><mi>𝟏𝟐𝟑𝟒.</mi></mpadded>
</math>
