crates/math-core/tests/snapshots/conversion_test__mathbin.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mathbin{|}y"
---
<math>
    <mi>x</mi>
    <mo stretchy="false" lspace="0.2222em" rspace="0.2222em">|</mo>
    <mi>y</mi>
</math>
