crates/math-core/tests/snapshots/conversion_test__mathbin_after_dots.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\dots\\mathbin+, \\dots+"
---
<math>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0" rspace="0">·</mo>
    <mo stretchy="false" lspace="0" rspace="0">+</mo>
    <mo>,</mo>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0" rspace="0">·</mo>
    <mo lspace="0" rspace="0">+</mo>
</math>
